--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,45 @@
-node_modules
+# Front-end
 
-/.cache
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
+.venv/
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
 /build
-.env
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# python generated files
+__pycache__/
+*.py[oc]
+build/
+dist/
+wheels/
+*.egg-info
