--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,14 @@
-# Front-end
+# JavaScript
+node_modules
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
-.venv/
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
+# Remix
+/.cache
 /build
+.env
+.dev.vars
 
-# misc
+# Cloudflare
+.wrangler
+
+# Misc
 .DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-# python generated files
-__pycache__/
-*.py[oc]
-build/
-dist/
-wheels/
-*.egg-info
