Update project name in Wrangler configuration to 'mieroom'

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "tmp",
+	"name": "mieroom",
 	"compatibility_date": "2025-02-24",
 	"pages_build_output_dir": "./build/client",
 	"observability": {
